--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 		</section>
 		<section id="about"> <!--Doit être une section-->
 			<div class="picture left"> <!--Pourquoi une div ?-->
-				<img src="/.netlify/images?url=/assets/images/nina.png" alt="Nina's self-portrait" width="702px" height="700px"
+				<img src="/.netlify/images?url=/assets/images/nina.webp" alt="Nina's self-portrait" width="702px" height="700px"
 					loading="lazy">
 			</div>
 			<div id="about-me">
@@ -111,31 +111,31 @@
 			<div class="container py-3">
 				<div class="gallery" style="display: none">
 					<img data-gallery-tag="Concert" class="gallery-item" width="700px" height="933px"
-						src="/.netlify/images?url=/assets/images/gallery/concerts/Aaron-paul-concert-unsplash-mini2.webp"
+						src="/.netlify/images?url=/assets/images/gallery/concerts/Aaron-paul-concert.webp"
 						alt="Photo taken during a concert" loading="lazy" />
 					<img data-gallery-tag="Entreprises" class="gallery-item" width="700px" height="1050px"
-						src="/.netlify/images?url=/assets/images/gallery/entreprise/ali-morshedlou-leader-unsplash-mini2.webp"
+						src="/.netlify/images?url=/assets/images/gallery/entreprise/ali-morshedlou-leader.webp"
 						alt="Portrait of a business leader" loading="lazy" />
 					<img data-gallery-tag="Entreprises" class="gallery-item" width="1034px" height="700px"
-						src="/.netlify/images?url=/assets/images/gallery/entreprise/jason-goodman-smile-unsplash-mini2.webp"
+						src="/.netlify/images?url=/assets/images/gallery/entreprise/jason-goodman-smile.webp"
 						alt="Portrait of an office worker" loading="lazy" />
 					<img data-gallery-tag="Mariages" class="gallery-item" width="875px" height="700px"
-						src="/.netlify/images?url=/assets/images/gallery/mariage/hannah-busing-hands-unsplash-mini2.webp"
+						src="/.netlify/images?url=/assets/images/gallery/mariage/hannah-busing-hands.webp"
 						alt="Photo of hands meeting" loading="lazy" />
 					<img data-gallery-tag="Portrait" class="gallery-item" width="700px" height="1049px"
-						src="/.netlify/images?url=/assets/images/gallery/portraits/ade-tunji-upset-unsplash-mini2.webp"
+						src="/.netlify/images?url=/assets/images/gallery/portraits/ade-tunji-upset.webp"
 						alt="portrait of an upset man" loading="lazy" />
 					<img data-gallery-tag="Mariages" class="gallery-item" width="700px" height="1050px"
-						src="/.netlify/images?url=/assets/images/gallery/mariage/jakob-owens-bride-unsplash-mini2.webp"
+						src="/.netlify/images?url=/assets/images/gallery/mariage/jakob-owens-bride.webp"
 						alt="photo of the bride and groom in the park" loading="lazy" />
 					<img data-gallery-tag="Portrait" class="gallery-item" width="700px" height="1052px"
-						src="/.netlify/images?url=/assets/images/gallery/portraits/nino-van-prattenburg-young-unsplash-mini2.webp"
+						src="/.netlify/images?url=/assets/images/gallery/portraits/nino-van-prattenburg-young.webp"
 						alt="Low angle portrait of a young woman" loading="lazy" />
 					<img data-gallery-tag="Concert" class="gallery-item" width="1050px" height="700px"
-						src="/.netlify/images?url=/assets/images/gallery/concerts/austin-neill-singer-unsplash-mini2.webp"
+						src="/.netlify/images?url=/assets/images/gallery/concerts/austin-neill-singer.webp"
 						alt="Photo of a singer during a concert" loading="lazy" />
 					<img data-gallery-tag="Entreprises" class="gallery-item" width="1143px" height="700px"
-						src="/.netlify/images?url=/assets/images/gallery/entreprise/mateus-campos-felipe-laught-unsplash-mini2.webp"
+						src="/.netlify/images?url=/assets/images/gallery/entreprise/mateus-campos-felipe-laught.webp"
 						alt="we have the right to laugh at work!" loading="lazy" />
 				</div>
 			</div>
@@ -211,7 +211,7 @@
 					</form>
 				</div>
 				<div class="picture right">
-					<img src="/.netlify/images?url=/assets/images/camera-mini2.webp&w=450&q=80" alt="vintage camera">
+					<img src="/.netlify/images?url=/assets/images/camera.webp" alt="vintage camera">
 				</div>
 			</div>
 		</section>
