--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<title>Nina Carducci, photographe</title>
 	<meta name="description"
-		content="Portfolio de la photographe Nina Carducci : portraits, mariage, reportage d'entreprise, évènementiel, retouche, albums... J'immortalise vos instants de vie pour en créer de précieux souvenirs.">
+		content="Portfolio de la photographe Nina Carducci : portraits, mariage, reportage d'entreprise, évènementiel, retouche, albums... J'immortalise vos instants de vie pour en créer de précieux souvenirs. Bordeaux et Ile-de-France">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="preload" href="./assets/bootstrap/bootstrap.min.css" as="style"
 		onload="this.onload=null;this.rel='stylesheet'">
@@ -37,8 +37,7 @@
 		</nav>
 	</header>
 	<main>
-		<!--manque le main-->
-		<section id="header"> <!--Banner serait plus approprié-->
+		<section id="header">
 			<banner id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 				<div class="carousel-indicators">
 					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
@@ -54,7 +53,7 @@
 							<source srcset="/.netlify/images?url=/assets/images/slider/ryoji-iwata-zebra-MS.webp" width="800px"
 								height="370px" media="(max-width:767px)" />
 							<img src="/.netlify/images?url=/assets/images/slider/ryoji-iwata-zebra.webp" alt="ryoji-iwata"
-								class="d-block" width="2000px" height="925px" />
+								class="d-block" width="1200px" height="555px" />
 						</picture>
 					</div>
 					<div class="carousel-item">
@@ -62,7 +61,7 @@
 							<source srcset="/.netlify/images?url=/assets/images/slider/nicholas-green-supporter-MS.webp"
 								width="800px" height="370px" media="(max-width:767px)" />
 							<img src="/.netlify/images?url=/assets/images/slider/nicholas-green-supporter.webp"
-								alt="nicholas-green" class="d-block" width="2000px" height="925px">
+								alt="nicholas-green" class="d-block" width="1200px" height="555px">
 						</picture>
 					</div>
 					<div class="carousel-item">
@@ -70,7 +69,7 @@
 							<source srcset="/.netlify/images?url=/assets/images/slider/edward-cisneros-dance-MS.webp" width="800px"
 								heigth="370px" media="(max-width:767px)" />
 							<img src="/.netlify/images?url=/assets/images/slider/edward-cisneros-dance.webp"
-								alt="edward-cisneros" class="d-block" width="2000px" height="924px">
+								alt="edward-cisneros" class="d-block" width="1200px" height="554px">
 						</picture>
 
 					</div>
@@ -87,9 +86,9 @@
 				</button>
 			</banner>
 		</section>
-		<section id="about"> <!--Doit être une section-->
-			<div class="picture left"> <!--Pourquoi une div ?-->
-				<img src="/.netlify/images?url=/assets/images/nina.webp" alt="Nina's self-portrait" width="702px" height="700px"
+		<section id="about">
+			<div class="picture left">
+				<img src="/.netlify/images?url=/assets/images/nina.webp" alt="Nina's self-portrait" width="470px" height="468px"
 					loading="lazy">
 			</div>
 			<div id="about-me">
@@ -106,35 +105,35 @@
 					bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
 			</div>
 		</section>
-		<section id="gallery"> <!--Doit être une section-->
+		<section id="gallery">
 			<h2 class="title">Portfolio</h2>
 			<div class="container py-3">
 				<div class="gallery" style="display: none">
-					<img data-gallery-tag="Concert" class="gallery-item" width="700px" height="933px"
+					<img data-gallery-tag="Concert" class="gallery-item" width="470px" height="626px"
 						src="/.netlify/images?url=/assets/images/gallery/concerts/Aaron-paul-concert.webp"
 						alt="Photo taken during a concert" loading="lazy" />
-					<img data-gallery-tag="Entreprises" class="gallery-item" width="700px" height="1050px"
+					<img data-gallery-tag="Entreprises" class="gallery-item" width="470px" height="705px"
 						src="/.netlify/images?url=/assets/images/gallery/entreprise/ali-morshedlou-leader.webp"
 						alt="Portrait of a business leader" loading="lazy" />
-					<img data-gallery-tag="Entreprises" class="gallery-item" width="1034px" height="700px"
+					<img data-gallery-tag="Entreprises" class="gallery-item" width="470px" height="318px"
 						src="/.netlify/images?url=/assets/images/gallery/entreprise/jason-goodman-smile.webp"
 						alt="Portrait of an office worker" loading="lazy" />
-					<img data-gallery-tag="Mariages" class="gallery-item" width="875px" height="700px"
+					<img data-gallery-tag="Mariages" class="gallery-item" width="470px" height="375px"
 						src="/.netlify/images?url=/assets/images/gallery/mariage/hannah-busing-hands.webp"
 						alt="Photo of hands meeting" loading="lazy" />
-					<img data-gallery-tag="Portrait" class="gallery-item" width="700px" height="1049px"
+					<img data-gallery-tag="Portrait" class="gallery-item" width="470px" height="704px"
 						src="/.netlify/images?url=/assets/images/gallery/portraits/ade-tunji-upset.webp"
 						alt="portrait of an upset man" loading="lazy" />
-					<img data-gallery-tag="Mariages" class="gallery-item" width="700px" height="1050px"
+					<img data-gallery-tag="Mariages" class="gallery-item" width="470px" height="705px"
 						src="/.netlify/images?url=/assets/images/gallery/mariage/jakob-owens-bride.webp"
 						alt="photo of the bride and groom in the park" loading="lazy" />
-					<img data-gallery-tag="Portrait" class="gallery-item" width="700px" height="1052px"
+					<img data-gallery-tag="Portrait" class="gallery-item" width="470px" height="706px"
 						src="/.netlify/images?url=/assets/images/gallery/portraits/nino-van-prattenburg-young.webp"
 						alt="Low angle portrait of a young woman" loading="lazy" />
-					<img data-gallery-tag="Concert" class="gallery-item" width="1050px" height="700px"
+					<img data-gallery-tag="Concert" class="gallery-item" width="470px" height="313px"
 						src="/.netlify/images?url=/assets/images/gallery/concerts/austin-neill-singer.webp"
 						alt="Photo of a singer during a concert" loading="lazy" />
-					<img data-gallery-tag="Entreprises" class="gallery-item" width="1143px" height="700px"
+					<img data-gallery-tag="Entreprises" class="gallery-item" width="470px" height="287px"
 						src="/.netlify/images?url=/assets/images/gallery/entreprise/mateus-campos-laught.webp"
 						alt="we have the right to laugh at work!" loading="lazy" />
 				</div>
